[package]
name = "arkworks-merkle-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-relations = { version = "0.4.0", default-features = false }
ark-r1cs-std = { version = "0.4.0", default-features = false }
ark-ed-on-bls12-377 = { version = "0.4.0", default-features = false, features = ["r1cs"] }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = ["merkle_tree", "r1cs"] }

[dev-dependencies]
ark-std = { version = "0.4.0", default-features = false }
ark-groth16 = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
