[package]
name = "arkworks-merkle-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-r1cs-std = { version = "0.4.0", default-features = false }
ark-ed-on-bls12-377 = { version = "0.4.0", default-features = false, features = ["r1cs"] }
ark-crypto-primitives = { version = "0.4.0", features = ["merkle_tree", "r1cs"] }

decaf377 = { git = "https://github.com/hu55a1n1/decaf377.git", default-features = false }
poseidon377 = { git = "https://github.com/dangush/poseidon377.git", version = "1.2.0", default-features = false }
poseidon-parameters = { git = "https://github.com/dangush/poseidon377.git", default-features = false }
